--- a/styles.css
+++ b/styles.css
@@ -6,37 +6,62 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #f4a261;
     color: #fff;
     padding: 10px 0;
     text-align: center;
 }
 
 nav ul {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    background-color: #264653;
 }
 
 nav ul li {
-    display: inline;
     margin: 0 10px;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    padding: 10px;
+    display: block;
+}
+
+nav ul li a:hover {
+    background-color: #2a9d8f;
 }
 
 main {
     padding: 20px;
+    max-width: 800px;
+    margin: auto;
 }
 
 footer {
-    background-color: #333;
+    background-color: #264653;
     color: #fff;
     text-align: center;
     padding: 10px 0;
     position: fixed;
-    width: 100%;
     bottom: 0;
+    width: 100%;
+}
+
+iframe {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
 }
